[package]
name = "solana-vote-program"
version = "1.8.14"
description = "Solana Vote program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-vote-program"
edition = "2018"

[dependencies]
bincode = "1.3.1"
log = "0.4.11"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.122"
serde_derive = "1.0.103"
solana-frozen-abi = { git = "https://github.com/solindex/frozen-abi.git", version = "=1.8.14" }
solana-frozen-abi-macro = { git = "https://github.com/solindex/frozen-abi.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
thiserror = "1.0"

[build-dependencies]
rustc_version = "0.2"

[lib]
crate-type = ["lib"]
name = "solana_vote_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
